解决 proto文件定义重复问题。抽象一个对象，重命名服务。
