# api/kratos-crud/api/helloworld/v1/greeter.pb.go
@@ -1,92 +1,0 @@
-// Code generated by protoc-gen-go. DO NOT EDIT.
-// source: helloworld/v1/greeter.proto
-
-/*
-Package v1 is a generated protocol buffer package.
-
-It is generated from these files:
-	helloworld/v1/greeter.proto
-	helloworld/v1/error_reason.proto
-
-It has these top-level messages:
-	HelloRequest
-	HelloReply
-*/
-package v1
-
-import proto "github.com/golang/protobuf/proto"
-import fmt "fmt"
-import math "math"
-import _ "google.golang.org/genproto/googleapis/api/annotations"
-
-// Reference imports to suppress errors if they are not otherwise used.
-var _ = proto.Marshal
-var _ = fmt.Errorf
-var _ = math.Inf
-
-// This is a compile-time assertion to ensure that this generated file
-// is compatible with the proto package it is being compiled against.
-// A compilation error at this line likely means your copy of the
-// proto package needs to be updated.
-const _ = proto.ProtoPackageIsVersion2 // please upgrade the proto package
-
-// The request message containing the user's name.
-type HelloRequest struct {
-	Name string `protobuf:"bytes,1,opt,name=name" json:"name,omitempty"`
-}
-
-func (m *HelloRequest) Reset()                    { *m = HelloRequest{} }
-func (m *HelloRequest) String() string            { return proto.CompactTextString(m) }
-func (*HelloRequest) ProtoMessage()               {}
-func (*HelloRequest) Descriptor() ([]byte, []int) { return fileDescriptor0, []int{0} }
-
-func (m *HelloRequest) GetName() string {
-	if m != nil {
-		return m.Name
-	}
-	return ""
-}
-
-// The response message containing the greetings
-type HelloReply struct {
-	Message string `protobuf:"bytes,1,opt,name=message" json:"message,omitempty"`
-}
-
-func (m *HelloReply) Reset()                    { *m = HelloReply{} }
-func (m *HelloReply) String() string            { return proto.CompactTextString(m) }
-func (*HelloReply) ProtoMessage()               {}
-func (*HelloReply) Descriptor() ([]byte, []int) { return fileDescriptor0, []int{1} }
-
-func (m *HelloReply) GetMessage() string {
-	if m != nil {
-		return m.Message
-	}
-	return ""
-}
-
-func init() {
-	proto.RegisterType((*HelloRequest)(nil), "helloworld.v1.HelloRequest")
-	proto.RegisterType((*HelloReply)(nil), "helloworld.v1.HelloReply")
-}
-
-func init() { proto.RegisterFile("helloworld/v1/greeter.proto", fileDescriptor0) }
-
-var fileDescriptor0 = []byte{
-	// 244 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xe2, 0x92, 0xce, 0x48, 0xcd, 0xc9,
-	0xc9, 0x2f, 0xcf, 0x2f, 0xca, 0x49, 0xd1, 0x2f, 0x33, 0xd4, 0x4f, 0x2f, 0x4a, 0x4d, 0x2d, 0x49,
-	0x2d, 0xd2, 0x2b, 0x28, 0xca, 0x2f, 0xc9, 0x17, 0xe2, 0x45, 0x48, 0xea, 0x95, 0x19, 0x4a, 0xc9,
-	0xa4, 0xe7, 0xe7, 0xa7, 0xe7, 0xa4, 0xea, 0x27, 0x16, 0x64, 0xea, 0x27, 0xe6, 0xe5, 0xe5, 0x97,
-	0x24, 0x96, 0x64, 0xe6, 0xe7, 0x15, 0x43, 0x14, 0x2b, 0x29, 0x71, 0xf1, 0x78, 0x80, 0x94, 0x07,
-	0xa5, 0x16, 0x96, 0xa6, 0x16, 0x97, 0x08, 0x09, 0x71, 0xb1, 0xe4, 0x25, 0xe6, 0xa6, 0x4a, 0x30,
-	0x2a, 0x30, 0x6a, 0x70, 0x06, 0x81, 0xd9, 0x4a, 0x6a, 0x5c, 0x5c, 0x50, 0x35, 0x05, 0x39, 0x95,
-	0x42, 0x12, 0x5c, 0xec, 0xb9, 0xa9, 0xc5, 0xc5, 0x89, 0xe9, 0x30, 0x45, 0x30, 0xae, 0x51, 0x26,
-	0x17, 0xbb, 0x3b, 0xc4, 0x25, 0x42, 0x71, 0x5c, 0x1c, 0xc1, 0x89, 0x95, 0x60, 0x5d, 0x42, 0xd2,
-	0x7a, 0x28, 0x0e, 0xd2, 0x43, 0xb6, 0x4f, 0x4a, 0x12, 0xbb, 0x64, 0x41, 0x4e, 0xa5, 0x92, 0x54,
-	0xd3, 0xe5, 0x27, 0x93, 0x99, 0x44, 0x84, 0x84, 0xf4, 0x91, 0x7c, 0x5b, 0x0d, 0x72, 0x51, 0xad,
-	0x53, 0x28, 0x97, 0x4c, 0x4a, 0x6a, 0x99, 0x5e, 0x76, 0x51, 0x62, 0x49, 0x7e, 0xb1, 0x5e, 0x62,
-	0x41, 0x26, 0xaa, 0x31, 0x4e, 0x82, 0x1e, 0x70, 0x6e, 0x00, 0xc8, 0x9f, 0x61, 0x86, 0x01, 0x8c,
-	0x51, 0x0a, 0x10, 0xe5, 0xba, 0xc9, 0x45, 0xa5, 0x29, 0xe0, 0xe0, 0x40, 0x09, 0x45, 0xeb, 0x32,
-	0xc3, 0x24, 0x36, 0x70, 0xa0, 0x18, 0x03, 0x02, 0x00, 0x00, 0xff, 0xff, 0xc3, 0xce, 0x02, 0xe5,
-	0x60, 0x01, 0x00, 0x00,
-}
