# openapi.yaml
@@ -3,29 +3,100 @@
 
 openapi: 3.0.3
 info:
-    title: UserInfo API
+    title: UserInfoService API
     description: The UserInfo service definition.
     version: 0.0.1
 paths:
-    /userInfo/{name}:
-        get:
+    /userInfo/delete:
+        post:
             tags:
-                - UserInfo
-            description: Sends a UserInfo
-            operationId: UserInfo_SayHello
-            parameters:
-                - name: name
-                  in: path
-                  required: true
-                  schema:
-                    type: string
+                - UserInfoService
+            operationId: UserInfoService_Delete
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/IdRequest'
+                required: true
             responses:
                 "200":
                     description: OK
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/HelloReply'
+                                $ref: '#/components/schemas/CommReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /userInfo/get:
+        post:
+            tags:
+                - UserInfoService
+            operationId: UserInfoService_Get
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/IdRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/UserInfoReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /userInfo/list:
+        post:
+            tags:
+                - UserInfoService
+            operationId: UserInfoService_List
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/ListRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/ListUserInfoReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /userInfo/save:
+        post:
+            tags:
+                - UserInfoService
+            operationId: UserInfoService_Save
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/UserInfo'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/CommReply'
                 default:
                     description: Default error response
                     content:
@@ -34,6 +105,15 @@ paths:
                                 $ref: '#/components/schemas/Status'
 components:
     schemas:
+        CommReply:
+            type: object
+            properties:
+                code:
+                    type: integer
+                    format: int64
+                message:
+                    type: string
+            description: return replay
         GoogleProtobufAny:
             type: object
             properties:
@@ -42,12 +122,29 @@ components:
                     description: The type of the serialized message.
             additionalProperties: true
             description: Contains an arbitrary serialized message along with a @type that describes the type of the serialized message.
-        HelloReply:
+        IdRequest:
             type: object
             properties:
+                id:
+                    type: integer
+                    format: int64
+        ListRequest:
+            type: object
+            properties:
+                name:
+                    type: string
+        ListUserInfoReply:
+            type: object
+            properties:
+                code:
+                    type: integer
+                    format: int64
                 message:
                     type: string
-            description: The response message containing the greetings
+                userInfoList:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/UserInfo'
         Status:
             type: object
             properties:
@@ -64,5 +161,30 @@ components:
                         $ref: '#/components/schemas/GoogleProtobufAny'
                     description: A list of messages that carry the error details.  There is a common set of message types for APIs to use.
             description: 'The `Status` type defines a logical error model that is suitable for different programming environments, including REST APIs and RPC APIs. It is used by [gRPC](https://github.com/grpc). Each `Status` message contains three pieces of data: error code, error message, and error details. You can find out more about this error model and how to work with it in the [API Design Guide](https://cloud.google.com/apis/design/errors).'
+        UserInfo:
+            type: object
+            properties:
+                userName:
+                    type: string
+                password:
+                    type: string
+                age:
+                    type: integer
+                    format: uint32
+                phone:
+                    type: string
+                address:
+                    type: string
+            description: https://developers.google.cn/protocol-buffers/docs/proto3 定义一个公用类型
+        UserInfoReply:
+            type: object
+            properties:
+                code:
+                    type: integer
+                    format: int64
+                message:
+                    type: string
+                userInfo:
+                    $ref: '#/components/schemas/UserInfo'
 tags:
-    - name: UserInfo
+    - name: UserInfoService
